# ExperiRender

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-linux.yaml  build-windows.yaml  build.yaml  style-check.yaml  style-checks.yaml
VkRenderer/: AllocatedBuffer.h  AllocatedImage.h  DeletionQueue.h  Hdri.cpp  Hdri.h  NsightAftermathHelpers.h  NsightAftermathShaderDatabase.cpp  RenderConfig.h  RenderObject.h  Vertex.h  VulkanGeometryKHR.cpp  VulkanGeometryKHR.h  VulkanResourceManager.cpp  VulkanResourceManager.h  cube.cpp  cube.h  gbuffer.cpp  gbuffer.h  main.cpp  postprocess.cpp  postprocess.h  raytraceKHR_vk.cpp  raytraceKHR_vk.h  raytracer.cpp  raytracer.h  shadowmap.cpp  shadowmap.h  ssao.cpp  ssao.h  ui.cpp  ui.h  vk_buffers.cpp  vk_buffers.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  (+10 more)
VkRenderer/GPUCrashMonitor/: CMakeLists.txt  NsightAftermathGpuCrashTracker.cpp  NsightAftermathGpuCrashTracker.h  NsightAftermathHelpers.h  NsightAftermathShaderDatabase.cpp  NsightAftermathShaderDatabase.h
VkRenderer/Scene/: CMakeLists.txt
VkRenderer/Scene/include/Scene/: PointLight.h  SceneDesc.h  camera.h
VkRenderer/Scene/src/: PointLight.cpp  SceneDesc.cpp  camera.cpp
assets/: scenes.json  teapot.glb
docs/: README_screenshot_test.md
shaders/: ACES.glsl  FXAA.frag  Fullscreen.frag  Fullscreen.vert  GBuffer.frag  GBuffer.frag.spv  GBuffer.vert  GBuffer.vert.spv  Grid.frag  Grid.vert  PBRMetallicRoughness.glsl  SSAO.comp  SSAO_BLUR.comp  ShadowDepthMap.frag  ShadowDepthMap.vert  Skybox.frag  Skybox.vert  SmartDeNoise.glsl  cube.frag  cube.vert  gradient.comp  input_structures.glsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  microfacet_sampling.glsl  pbrNeutral.glsl  pbr_util.glsl  random.glsl  raycommon.glsl  raytrace.rahit  raytrace.rchit  raytrace.rgen  raytrace.rmiss  ssao.comp.spv  transmission.glsl
src/: RenderObject.h  VulkanGeometryKHR.cpp  VulkanGeometryKHR.h  camera.cpp  camera.h  main.cpp  raytraceKHR_vk.cpp  raytraceKHR_vk.h  raytracer.cpp  raytracer.h  shadowmap.cpp  shadowmap.h  ssao.cpp  ssao.h  ui.cpp  ui.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h  vk_utils.h  vma_impl.cpp
tests/: CMakeLists.txt  check_test.cpp  test_camera.cpp  test_display.cpp  test_ssao.cpp  test_utils.cpp
tests/screenshot_tests/: run_screenshot_test.bat  screenshot_test.py
